--- a/gradle.properties
+++ b/gradle.properties
@@ -4,3 +4,7 @@ org.gradle.caching=true
 ktor_version=2.3.3
 logback_version=1.4.11
 kotlin_version=1.9.0
+h2_version=2.2.220
+postgres_version=42.6.0
+exposed_version=0.42.1
+hikari_version=5.1.0
