--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -6,19 +6,69 @@ services:
     container_name: playing-with-cache-redis
     command: redis-server --requirepass redis
     restart: always
+    networks:
+      - cache_network
     ports:
       - "6379:6379"
+    deploy:
+      resources:
+        limits:
+          cpus: '2'
+          memory: '1G'
+        reservations:
+          cpus: '0.50'
+          memory: '512M'
     environment:
       REDIS_PASSWORD: redis
 
   postgresql:
     image: postgres:16-alpine
     container_name: playing-with-cache-postgresql
-    command: -c 'max_connections=1000'
+    command: -c 'max_connections=200'
     restart: always
+    networks:
+      - cache_network
     ports:
       - "5432:5432"
+    deploy:
+      resources:
+        limits:
+          cpus: '2'
+          memory: '1G'
+        reservations:
+          cpus: '0.50'
+          memory: '512M'
     environment:
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: postgres
       POSTGRES_DB: perf_db
+    healthcheck:
+      test: ["CMD", "pg_isready", "-U", "postgres"]
+
+  pgadmin:
+    image: dpage/pgadmin4:5.7
+    container_name: playing-with-cache-pgadmin
+    restart: always
+    networks:
+      - cache_network
+    ports:
+      - "5050:80"
+    deploy:
+      resources:
+        limits:
+          cpus: '2'
+          memory: '1G'
+        reservations:
+          cpus: '0.50'
+          memory: '512M'
+    environment:
+      PGADMIN_DEFAULT_EMAIL: admin@email.com
+      PGADMIN_DEFAULT_PASSWORD: admin
+    depends_on:
+      postgresql:
+        condition: service_healthy
+
+
+networks:
+  cache_network:
+    driver: bridge
