--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -9,7 +9,7 @@ services:
     networks:
       - cache_network
     ports:
-      - "6379:6379"
+      - '6379:6379'
     deploy:
       resources:
         limits:
@@ -29,7 +29,7 @@ services:
     networks:
       - cache_network
     ports:
-      - "5432:5432"
+      - '5432:5432'
     deploy:
       resources:
         limits:
@@ -43,7 +43,7 @@ services:
       POSTGRES_PASSWORD: postgres
       POSTGRES_DB: perf_db
     healthcheck:
-      test: ["CMD", "pg_isready", "-U", "postgres"]
+      test: ['CMD', 'pg_isready', '-U', 'postgres']
 
   pgadmin:
     image: dpage/pgadmin4:5.7
@@ -52,7 +52,7 @@ services:
     networks:
       - cache_network
     ports:
-      - "5050:80"
+      - '5050:80'
     deploy:
       resources:
         limits:
@@ -67,7 +67,6 @@ services:
     depends_on:
       postgresql:
         condition: service_healthy
-
 
 networks:
   cache_network:
