--- a/gradle.properties
+++ b/gradle.properties
@@ -2,9 +2,10 @@ kotlin.code.style=official
 org.gradle.parallel=true
 org.gradle.caching=true
 ktor_version=2.3.3
-logback_version=1.4.11
+logback_version=1.4.12
 kotlin_version=1.9.0
 h2_version=2.2.220
 postgres_version=42.6.0
 exposed_version=0.42.1
 hikari_version=5.1.0
+kreds_version=0.9.1
